--- a/JavacriptGeneralSamples/Web.config
+++ b/JavacriptGeneralSamples/Web.config
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0"?>
+<?xml version="1.0"?>
 
 <!--
   For more information on how to configure your ASP.NET application, please visit
@@ -11,4 +11,21 @@
       <httpRuntime targetFramework="4.5" />
     </system.web>
 
+    <system.serviceModel>
+        <behaviors>
+            <endpointBehaviors>
+                <behavior name="JavacriptGeneralSamples.Services.JSONSampleServiceAspNetAjaxBehavior">
+                    <webHttp />
+                </behavior>
+            </endpointBehaviors>
+        </behaviors>
+        <serviceHostingEnvironment aspNetCompatibilityEnabled="true"
+            multipleSiteBindingsEnabled="true" />
+        <services>
+            <service name="JavacriptGeneralSamples.Services.JSONSampleService">
+                <endpoint address="" behaviorConfiguration="JavacriptGeneralSamples.Services.JSONSampleServiceAspNetAjaxBehavior"
+                    binding="webHttpBinding" contract="JavacriptGeneralSamples.Services.ISampleService" />
+            </service>
+        </services>
+    </system.serviceModel>
 </configuration>
