--- a/JavacriptGeneralSamples/Web.config
+++ b/JavacriptGeneralSamples/Web.config
@@ -14,8 +14,11 @@
     <system.serviceModel>
         <behaviors>
             <endpointBehaviors>
-                <behavior name="JavacriptGeneralSamples.Services.JSONSampleServiceAspNetAjaxBehavior">
+                <behavior name="RestfulBehaviour">
                     <webHttp />
+                </behavior>
+                <behavior name="SimpleJSBehaviour">
+                    <enableWebScript />
                 </behavior>
             </endpointBehaviors>
         </behaviors>
@@ -23,7 +26,11 @@
             multipleSiteBindingsEnabled="true" />
         <services>
             <service name="JavacriptGeneralSamples.Services.JSONSampleService">
-                <endpoint address="" behaviorConfiguration="JavacriptGeneralSamples.Services.JSONSampleServiceAspNetAjaxBehavior"
+                <endpoint address="" behaviorConfiguration="RestfulBehaviour"
+                    binding="webHttpBinding" contract="JavacriptGeneralSamples.Services.ISampleService" />
+            </service>
+            <service name="JavacriptGeneralSamples.Services.NonRestfulJSONSampleService">
+                <endpoint address="" behaviorConfiguration="SimpleJSBehaviour"
                     binding="webHttpBinding" contract="JavacriptGeneralSamples.Services.ISampleService" />
             </service>
         </services>
